--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -4,12 +4,14 @@
   --t007-toast-type-color: whitesmoke;
   --t007-toast-background: rgb(from black r g b/.4);
   --t007-toast-background-blur: 10px;
-  --t007-toast-transition-duration: 250ms;
-  --t007-toast-transition-timing-function: cubic-bezier(0.34, 1.64, 0.64, 1);
+  --t007-toast-animation-duration: 250ms;
+  --t007-toast-animation-timing-function: cubic-bezier(0.34, 1.64, 0.64, 1);
   --t007-toast-margin: 8px;
+  --t007-toast-min-width: unset;
   --t007-toast-width: calc(var(--t007-toast-unit) * 20);
-  --t007-toast-height: fit-content;
   --t007-toast-max-width: 100%;
+  --t007-toast-min-height: 4.25rem;
+  --t007-toast-height: fit-content;
   --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5); 
   --t007-toast-padding: calc(var(--t007-toast-unit)/2.25);
   --t007-toast-border-radius: calc(var(--t007-toast-unit)/3);
@@ -18,7 +20,10 @@
   --t007-toast-image-width: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-border-radius: calc(var(--t007-toast-unit)/5);
-  --t007-toast-icon-size: calc(var(--t007-toast-unit) * 1.5);
+  --t007-toast-icon-width: calc(var(--t007-toast-unit) * 1.5);
+  --t007-toast-icon-height: calc(var(--t007-toast-unit) * 1.5);
+  --t007-toast-icon-font-size: calc(var(--t007-toast-icon-height) * .85);
+  --t007-toast-icon-line-height: 1.25;
   --t007-toast-font-color: var(--t007-toast-type-color);
   --t007-toast-font-size: calc(var(--t007-toast-unit)/1.05);
   --t007-toast-max-lines: 7;
@@ -103,9 +108,11 @@
   display: flex;
   align-items: center;
   gap: calc(var(--t007-toast-unit)/2.5);
+  min-width: var(--t007-toast-min-width);
   width: var(--t007-toast-width);
-  height: var(--t007-toast-height);
   max-width: var(--t007-toast-max-width);
+  min-height: var(--t007-toast-min-height);
+  height: var(--t007-toast-height);
   max-height: var(--t007-toast-max-height);
   padding: var(--t007-toast-padding);
   background: var(--t007-toast-background);
@@ -115,9 +122,9 @@
   overflow: hidden;
   transition: transform 300ms ease, opacity 300ms ease;
   will-change: transform, opacity;
-  animation-timing-function: var(--t007-toast-transition-timing-function);
+  animation-timing-function: var(--t007-toast-animation-timing-function);
   animation-fill-mode: forwards;
-  animation-duration: var(--t007-toast-transition-duration);
+  animation-duration: var(--t007-toast-animation-duration);
   animation-name: xSlideBounceOut;
 }
 
@@ -198,7 +205,8 @@
   transition: width ease;
 }
 
-.t007-toast:not(.success, .error, .warning, .info) .t007-toast-image-wrapper:not(:has(.t007-toast-image)) {
+.t007-toast:not(.has-icon) .t007-toast-image-wrapper:not(:has(.t007-toast-image)),
+.t007-toast-image-wrapper:not(:has(.t007-toast-image)):has(.t007-toast-icon:empty) {
   display: none;
 }
 
@@ -214,37 +222,29 @@
   overflow: hidden;
 }
 
-.t007-toast-image-wrapper:not(:has(.t007-toast-image)) {
-  background: transparent;
-  flex-basis: calc(var(--t007-toast-icon-size) + var(--t007-toast-unit)*0.5);
+.t007-toast:has(.t007-toast-image-wrapper:not(:has(.t007-toast-image))) {
+  gap: 0;
 }
 
-.t007-toast-image-wrapper::before {
-  content: '';
+.t007-toast-image-wrapper:not(:has(.t007-toast-image)) {
+  width: var(--t007-toast-icon-width);
+  height: var(--t007-toast-icon-height);
+  background: transparent;
+  flex-basis: var(--t007-toast-icon-width);
+}
+
+.t007-toast-icon {
   position: absolute;
   inset: 0;
   margin: auto;
-  width: var(--t007-toast-icon-size);
-  height: var(--t007-toast-icon-size);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+  width: unset;
+  height: unset;
+  font-size: var(--t007-toast-icon-font-size);
+  line-height: var(--t007-toast-icon-line-height);
 }
 
-.t007-toast.info .t007-toast-image-wrapper::before {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%233498db"/><path fill="none" stroke="%23fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M12 10v6"/><circle cx="12" cy="7" r="1.5" fill="%23fff"/></svg>');
-}
-
-.t007-toast.success .t007-toast-image-wrapper::before {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%2327ae60"/><path fill="none" stroke="%23fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M7 12l3 3l6-6"/></svg>');
-}
-
-.t007-toast.error .t007-toast-image-wrapper::before {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%23e74c3c"/><path fill="%23fff" stroke="%23fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M8 8l8 8M16 8l-8 8"/></svg>');
-}
-
-.t007-toast.warning .t007-toast-image-wrapper::before {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="%23f1c40f" stroke="%23f39c12" stroke-width="2" stroke-linejoin="round" d="M12 3L2.5 20.5A2 2 0 0 0 4.5 23h15a2 2 0 0 0 2-2.5L12 3z"/><circle cx="12" cy="17" r="1.5" fill="%23fff"/><path fill="none" stroke="%23fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M12 8v6"/></svg>');
+:where(.t007-toast-icon > *) {
+  all: inherit;
 }
 
 .t007-toast-image-wrapper .t007-toast-image {
@@ -298,7 +298,7 @@
 }
 
 @media (max-width: 36rem) {
-  .t007-toast-container {
+  :where(:root) {
     --t007-toast-unit: .9rem;
   }
 }
