--- a/T007_input_library/T007_input.css
+++ b/T007_input_library/T007_input.css
@@ -72,8 +72,9 @@
   box-sizing: border-box;
   font-family: var(--t007-input-font-family);
   isolation: isolate;
-  transition-property: transform, filter, background-color, color, border, right,
-    left, top, bottom, width, height, font-size, scale;
+  transition-property:
+    transform, filter, background-color, color, border, right, left, top,
+    bottom, width, height, font-size, scale;
   transition-duration: 150ms;
   transition-timing-function: ease;
 }
@@ -104,19 +105,19 @@
 
 .t007-input-field:where(
     :has(
-        .t007-input:is(
-            [data-filled],
-            :focus,
-            :-webkit-autofill,
-            :not(:placeholder-shown):where(
-                :not(select):not([type="date"]):not([type="time"]):not(
-                    [type="datetime-local"]
-                  ):not([type="month"]):not([type="week"]):not(
-                    [type="color"]
-                  ):not([type="range"]):not([type="file"])
-              )
-          )
-      )
+      .t007-input:is(
+          [data-filled],
+          :focus,
+          :-webkit-autofill,
+          :not(:placeholder-shown):where(
+              :not(select):not([type="date"]):not([type="time"]):not(
+                  [type="datetime-local"]
+                ):not([type="month"]):not([type="week"]):not(
+                  [type="color"]
+                ):not([type="range"]):not([type="file"])
+            )
+        )
+    )
   ) {
   --t007-input-current-color: var(--t007-input-focus-color);
   --t007-input-current-text-color: var(--t007-input-focus-text-color);
@@ -243,31 +244,31 @@
 
 .t007-input-field:not(
     :has(
-        .t007-input:is(
-            [data-filled],
-            :focus,
-            :-webkit-autofill,
-            :not(:placeholder-shown):where(
-                :not(select):not([type="date"]):not([type="time"]):not(
-                    [type="datetime-local"]
-                  ):not([type="month"]):not([type="week"]):not(
-                    [type="color"]
-                  ):not([type="range"]):not([type="file"])
-              )
-          ),
-        .t007-input:is(
-            select,
-            :not([placeholder=""]),
-            [type="date"],
-            [type="time"],
-            [type="datetime-local"],
-            [type="month"],
-            [type="week"],
-            [type="color"],
-            [type="range"],
-            [type="file"]
-          )
-      )
+      .t007-input:is(
+          [data-filled],
+          :focus,
+          :-webkit-autofill,
+          :not(:placeholder-shown):where(
+              :not(select):not([type="date"]):not([type="time"]):not(
+                  [type="datetime-local"]
+                ):not([type="month"]):not([type="week"]):not(
+                  [type="color"]
+                ):not([type="range"]):not([type="file"])
+            )
+        ),
+      .t007-input:is(
+          select,
+          :not([placeholder=""]),
+          [type="date"],
+          [type="time"],
+          [type="datetime-local"],
+          [type="month"],
+          [type="week"],
+          [type="color"],
+          [type="range"],
+          [type="file"]
+        )
+    )
   )
   .t007-input-outline-notch {
   width: auto !important;
@@ -365,7 +366,8 @@
   .t007-input-floating-label.t007-input-shake {
   transform: translateY(
       calc(
-        -1 * ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
+        -1 *
+          ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
       )
     )
     translateX(0.25rem);
@@ -423,7 +425,8 @@
     (
         (var(--t007-input-height) / 2) -
           ((var(--t007-input-font-size) / 1.25) / 2)
-      ) - ((var(--t007-input-floating-label-font-size) * 1.3) / 2) - 1px
+      ) -
+      ((var(--t007-input-floating-label-font-size) * 1.3) / 2) - 1px
   );
 }
 
@@ -463,8 +466,10 @@
 :where(
     .t007-input[type="file"].t007-input-image-selected
   )::file-selector-button {
-  background: center/contain no-repeat var(--t007-input-image-src),
-    linear-gradient(black, black), black;
+  background:
+    center/contain no-repeat var(--t007-input-image-src),
+    linear-gradient(black, black),
+    black;
   color: transparent;
   padding-block: var(--t007-input-sb-padding-block);
   border: none;
@@ -521,16 +526,16 @@
   top: 0;
   left: 0;
   display: block;
-  height: 0.2rem;
+  height: 0.1rem;
 }
 
 .t007-input-helper-text {
   position: absolute;
-  top: -1px;
   font-size: var(--t007-input-helper-font-size);
   color: var(--t007-input-current-color);
   opacity: 0;
-  line-height: 1.3;
+  line-height: 1.2;
+  word-break: break-all;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   line-clamp: 2;
@@ -783,7 +788,10 @@
   background: var(--t007-input-ripple-bg-color);
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  transition: width 0.3s ease, height 0.3s ease, opacity 0.3s ease;
+  transition:
+    width 0.3s ease,
+    height 0.3s ease,
+    opacity 0.3s ease;
   opacity: 0;
   pointer-events: none;
 }
